--- a/ru/templates/firefox/whatsnew.html
+++ b/ru/templates/firefox/whatsnew.html
@@ -4,8 +4,8 @@
 
 {% l10n whatsnew_feature %}
 <p id="ru-search">
-    Also new in this release: Google is now your default search engine. To change the active search engine, click the down arrow next to the search engine's icon, and select a new search engine.
-    <a href="http://support.mozilla.org/ru/kb/stroka-poiska?e=es&redirectlocale=en-US&as=s&s=manage+search&r=3&redirectslug=Search+bar#w_managing-search-engines">Learn more.</a>
+    Также новое в этом релизе: Теперь вашей поисковой системой по умолчанию является Google. Чтобы сменить активную поисковую систему, нажмите на значок стрелки вниз рядом со значком поисковой системы, и выберите новую поисковую систему.
+    <a href="https://support.mozilla.org/ru/kb/stroka-poiska#w_ouj-liaijksiuau-laiajahoi-aiaaiko">Подробнее.</a>
   </p>
 {% endl10n %}
 
