--- a/ru/templates/firefox/whatsnew.html
+++ b/ru/templates/firefox/whatsnew.html
@@ -4,7 +4,8 @@
 
 {% l10n whatsnew_feature %}
 <p id="ru-search">
-    Также новое в этом релизе: Теперь вашей поисковой системой по умолчанию является Google. Чтобы сменить активную поисковую систему, нажмите на значок стрелки вниз рядом со значком поисковой системы, и выберите новую поисковую систему.
+    <img src="/media/img/firefox/whatsnew/ru-search.png">
+    Теперь вашей поисковой системой по умолчанию является Google. Чтобы сменить активную поисковую систему, нажмите на значок стрелки вниз рядом со значком поисковой системы, и выберите новую поисковую систему.
     <a href="https://support.mozilla.org/ru/kb/stroka-poiska#w_ouj-liaijksiuau-laiajahoi-aiaaiko">Подробнее.</a>
   </p>
 {% endl10n %}
