l10n: ru, updated text for whatsnew page
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107602 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ru/templates/firefox/whatsnew.html
+++ b/ru/templates/firefox/whatsnew.html
@@ -3,6 +3,9 @@
 {% extends "firefox/whatsnew.html" %}
 
 {% l10n whatsnew_feature %}
-
+<p id="ru-search">
+    <img src="/media/img/firefox/whatsnew/ru-search.png">
+    Easily choose your favorite search engine. To change the active search engine, click the down arrow next to the search engine's icon, and select a new search engine. <a href="https://support.mozilla.org/ru/kb/stroka-poiska#w_ouj-liaijksiuau-laiajahoi-aiaaiko">Подробнее.</a>
+  </p>
 {% endl10n %}
 
