--- a/ru/templates/firefox/whatsnew.html
+++ b/ru/templates/firefox/whatsnew.html
@@ -5,7 +5,7 @@
 {% l10n whatsnew_feature %}
 <p id="ru-search">
     <img src="/media/img/firefox/whatsnew/ru-search.png">
-    Easily choose your favorite search engine. To change the active search engine, click the down arrow next to the search engine's icon, and select a new search engine. <a href="https://support.mozilla.org/ru/kb/stroka-poiska#w_ouj-liaijksiuau-laiajahoi-aiaaiko">Подробнее.</a>
+    Вы можете легко выбрать свою любимую поисковую систему. Чтобы сменить текущую поисковую систему, нажмите на значок стрелки вниз рядом со значком поисковой системы, и выберите новую поисковую систему. <a href="https://support.mozilla.org/ru/kb/stroka-poiska#w_ouj-liaijksiuau-laiajahoi-aiaaiko">Подробнее.</a>
   </p>
 {% endl10n %}
 
